		Makefile.am.
3.3.88	20feb18	Added --sstexclude command line option to prune unwanted
		clutter from the SST window.
		Updated "/View/Mouseover Copies To Clipboard" menu option to
                copying signal names into the clipboard so they can be pasted
                into text editors, etc.
		Fixed Write Save File to handle getting confused by initial
		cancel then retry.
                Updated	v2k input/output declarations to handle	unpacked arrays.
                Fix for	pattern	marks that could overshoot the left marker.
3.3.89	17mar18	Added support for 32-bit conversions in BitsToReal.
                Crash fix for pattern search with reals using LXT, LXT2, VZT.
3.3.90  08may18 For Cut Traces, fix up scroll position if there are traces
                above the current row being cut.
                Bits to real crash fix for very large floats.
                Fixed gray code conversions that were incomplete for right
                justified vectors such that the vector length is not a
                multiple of the radix size (4 for hex, 3 for oct).
                Warray-bounds warning fix for 32-bit conversions in BitsToReal.
3.3.91  29may18 Added support for GSettings for when GConf is removed from 
                distributions such as Debian and Ubuntu.
                Performance fix for large number of groups (remove useless
                recursion required for transaction traces).
3.3.92  05jul18 Harden FST loader for missing .hier files (if applicable).
		GTK3 "How does the code know the size to allocate?" warning fix.
		Fix scrolling on help window by adding scroll to end mark.
                Fix scrolling on status	window when use_toolbutton_interface
                rc var is set to FALSE by adding scroll to end mark.
		GTK3: Fix status window so it does not grow in the y direction.
		Ifdef out code for --slider-zoom as it does not function with
		GTK toolkit versions > 1.x series.