@@ -174,6 +174,7 @@ rtlbrowse: gtk_table_attach -> gtk_grid_attach/gtk_widget_set_hexpand/gtk_widget
 ls -1 | awk '{print "cat "$0" | sed s/gtk_table_new/XXX_gtk_table_new/g >"$0".xxx ; mv "$0".xxx "$0}' | sh
 ls -1 | awk '{print "cat "$0" | sed s/gtk_table_attach/XXX_gtk_table_attach/g >"$0".xxx ; mv "$0".xxx "$0}' | sh
 ls -1 | awk '{print "cat "$0" | sed s/GTK_TABLE/XXX_GTK_TABLE/g >"$0".xxx ; mv "$0".xxx "$0}' | sh
+Ifdef removal of gtk_handle_box_new force_toolbars code.
 
 ===
 
